--- a/dev.bavdance.ru/wp-content/themes/bavdance/blog.html
+++ b/dev.bavdance.ru/wp-content/themes/bavdance/blog.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style_old.css">
 
 	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
